--- a/src/app/ver-atletas/ver-atletas.component.html
+++ b/src/app/ver-atletas/ver-atletas.component.html
@@ -44,8 +44,8 @@
                 <select id="genero" class="form-select filtros-select" [(ngModel)]="filtros.genero"
                     (change)="aplicarFiltros()">
                     <option value="">Todos</option>
-                    <option value="Hombre">Hombre</option>
-                    <option value="Mujer">Mujer</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Femenino">Femenino</option>
                 </select>
             </div>
 
@@ -107,7 +107,7 @@
                         <td>{{ atleta.cedula }}</td>
                         <td>{{ atleta.nombre }}</td>
                         <td>{{ atleta.edad }}</td>
-                        <td>{{ atleta.genero }}</td>
+                        <td>{{ atleta.generoText }}</td>
                         <td>{{ atleta.deporte }}</td>
                         <td>{{ atleta.posicion }}</td>
                         <td>
