Restructuracion de componentes en carpeta view

--- a/src/app/view/forgot-password/forgot-password.component.scss
+++ b/src/app/view/forgot-password/forgot-password.component.scss
@@ -1,4 +1,4 @@
-@use '../../custom-theme.scss' as theme;
+@use '../../../custom-theme.scss' as theme;
 
 .forgot-password-container {
     display: flex;
