--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../../assets/adminlte/plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="./../../../assets/adminlte/plugins/fontawesome-free/css/all.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="../../assets/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="./../../../assets/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../../assets/adminlte/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="./../../../assets/adminlte/dist/css/adminlte.min.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -75,7 +75,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="./../../assets/default-photo.png" class="profile-img" alt="User Image">
+            <img src="./../../../assets/default-photo.png" class="profile-img" alt="User Image">
           </div>
           <div class="info">
             <div class="user-name">{{ userName }}</div>
@@ -158,10 +158,11 @@
   <!-- ./wrapper -->
 
   <!-- Scripts -->
-  <script src="../../assets/adminlte/plugins/jquery/jquery.min.js"></script>
-  <script src="../../assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../../assets/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <script src="../../assets/adminlte/dist/js/adminlte.min.js"></script>
+  <script src="./../../../assets/adminlte/plugins/jquery/jquery.min.js"></script>
+  <script src="./../../../assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./../../../assets/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script src="./../../../assets/adminlte/dist/js/adminlte.min.js"></script>
+
 
   <!-- Modal para Cierre de Sesión -->
   <!-- Modal para Cierre de Sesión -->
