--- a/src/app/view/crear-atletas/crear-atletas.component.scss
+++ b/src/app/view/crear-atletas/crear-atletas.component.scss
@@ -1,4 +1,4 @@
-@use '../../custom-theme.scss' as theme;
+@use '../../../custom-theme.scss' as theme;
 
 .card-body {
     background-color: var(--secondary-color) !important;
